[package]
name = "zalduvrai"
version = "0.1.0"
edition = "2024"

[dependencies]
htmlentity = "1.3.2"
itertools = "0.14.0"
quick-xml = "0.37.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
